--- a/index.css
+++ b/index.css
@@ -86,6 +86,35 @@ footer {
   border-top: 1px solid #9b9b9b;
   padding-top: 2rem;
 }
+
+.input-container {
+  position: relative;
+}
+
+#floating-placeholder {
+  position: absolute;
+  pointer-events: none;
+  left: 15px;
+  top: 10px;
+  transition: 0.2s ease all;
+  color: #999;
+}
+input:focus {
+  outline: none;
+  border-top-color: #cccccc9f;
+}
+
+input:focus ~ #floating-placeholder {
+  top: -10px;
+  left: 10px;
+  font-size: 1rem;
+  font-weight: 400;
+  color: #000000;
+  font-weight: 500;
+  text-shadow: 2px 2px 2px #f4f4f4;
+  padding: 0 5px;
+}
+
 @keyframes slide {
   0% {
     opacity: 0;
