--- a/index.css
+++ b/index.css
@@ -37,6 +37,8 @@ select {
   padding: 0.5rem;
   border: 1px solid #ccc;
   border-radius: 4px;
+  color: #333;
+  font-size: 15px;
 }
 textarea {
   width: calc(100% - 1rem);
@@ -60,6 +62,12 @@ button {
   color: white;
   cursor: pointer;
 }
+
+button:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
+}
+
 .carroussel {
   height: 50px;
 }
@@ -139,21 +147,16 @@ input:focus {
 input:focus ~ #floating-placeholder {
   top: -10px;
   left: 10px;
-  font-size: 1rem;
+  font-size: 15px;
   font-weight: 400;
-  color: #000000;
-  font-weight: 500;
-  text-shadow: 2px 2px 2px #f4f4f4;
   padding: 0 5px;
 }
 /* When input has text, keep the placeholder floated */
 input:not(:placeholder-shown) ~ #floating-placeholder {
   top: -10px;
   left: 10px;
-  font-size: 1rem;
+  font-size: 15px;
   font-weight: 400;
-  color: #000000;
-  font-weight: 500;
   text-shadow: 2px 2px 2px #f4f4f4;
   padding: 0 5px;
 }
